--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #eceff1;
+  color: #4d4d4d;
+  margin: 10px;
+}
+
+.Main-container {
+  text-align: center;
+}
+
+.Main-container .btn {
+  background-color: mediumblue;
+  color: #fff;
+  font-size: 20px;
+  padding: 20px;
+  min-width: 300px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 code {
